header and text section in mobile dark theme done

--- a/styles/light.css
+++ b/styles/light.css
@@ -3,6 +3,16 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+:root.theme-light {
+  /* Переменные светлой темы */    
+}
+
+@media (prefers-color-scheme: light) {
+:root {
+      /* Дублируем переменные светлой темы */    
+  }
+}
+
 
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
@@ -10,3 +20,4 @@
     чем стили в медиазапросе предпочтений пользователя
   */
 }
+/* Остальные стили */
