--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,4 +39,11 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  cursor: pointer;
 }
+
+button:focus,
+a:focus {
+  outline: none;
+}
+
