dark and light mode done

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,16 +3,15 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
-.page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+:root .theme_dark {
+  --main-color: #000028;
+  --text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --main-header-color: #DB00FF;
+  --bg-image: url('../images/cover-image-dark.png');
+  --title-decor: #000028;
+  --section-title-decor: #FF0070;
+  --hover-border: rgba(255, 0, 112, 0.40);
+  --menu-button: #FF0070;
+  --decorative: block;
 }
-
-:root.theme-dark {
-  /* Дублируем переменные для тёмной темы */
-}
-
-/* Остальные стили */
