--- a/styles/light.css
+++ b/styles/light.css
@@ -3,21 +3,39 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-:root.theme-light {
-  /* Переменные светлой темы */    
+:root .theme_light {
+  --main-color: #FFF1F7;
+  --text-color: #353430;
+  --accent-color: #FF8DCB;
+  --main-header-color: #FFC2E6;
+  --bg-image: url('../images/cover-image-light.png'); 
+  --title-decor: #353430;
+  --section-title-decor: #353430;
+  --hover-border: rgba(50, 49, 45, 0.40);
+  --menu-button: #353430;
+  --decorative: none;
+  
 }
 
 @media (prefers-color-scheme: light) {
 :root {
-      /* Дублируем переменные светлой темы */    
+  --main-color: #FFF1F7;
+  --text-color: #353430;
+  --accent-color: #FF8DCB;
+  --main-header-color: #FFC2E6;
+  --bg-image: url('../images/cover-image-light.png');
+  --title-decor: #353430;
+  --section-title-decor: #353430;  
+  --hover-border: rgba(50, 49, 45, 0.40);
+  --menu-button: #353430;
+  --decorative: none;
   }
 }
+  /* .header__decorating {
+    display: none;
+  }
 
-
-.page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
-/* Остальные стили */
+  
+  .header__theme-menu::before {
+    display: none;
+  }
