--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: var(--font-family, 'Arial', sans-serif);
   background: var(--main-color) var(--bg-image) no-repeat center / cover;
   background-attachment: fixed;
-  font-family: var(--font-family, 'Arial', sans-serif);
 }
 
 .wrapper {
@@ -12,18 +11,18 @@
 }
 
 .header {
+  position: relative;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr fit-content(12rem) 1fr;
-  position: relative;
   height: 100vh;
 }
 
 .header::before {
   content: '';
   position: absolute;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--corner-color);
+  border-block-start: 1px solid var(--corner-color);
   inline-size: 1.56488rem;
   block-size: 1.56244rem;
   inset-inline-end: 0.62rem;
@@ -33,8 +32,8 @@
 .header::after {
   content: '';
   position: absolute;
-  border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--corner-color);
+  border-block-end: 1px solid var(--corner-color);
   inline-size: 1.56488rem;
   block-size: 1.56244rem;
   inset-block-end: 0.62rem;
@@ -48,14 +47,14 @@
 .header__theme-menu::before {
   content: '';
   position: absolute;
+  display: var(--decorative);
+  border-radius: 50%;
   background: var(--accent-color);
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
+  filter: drop-shadow(0 0 4px var(--accent-color));
   block-size: 0.5625rem;
   inline-size: 0.5625rem;
-  border-radius: 50%;
   inset-inline-end: 1.2rem;
   inset-block-start: 1.25rem;
-  display: var(--decorative);
 }
 
 .header__theme-menu-list {
@@ -65,12 +64,12 @@
 }
 
 .header__theme-menu-button {
-  background: transparent;
+  border: none;
+  padding: 0.13rem 0.8125rem;
   color: var(--menu-button);
   font-size: 1.125rem;
   line-height: 1.125rem;
-  border: none;
-  padding: 0.13rem 0.8125rem;
+  background: transparent;
 }
 
 .header__theme-menu-button:hover {
@@ -82,39 +81,39 @@
 }
 
 .header__theme-menu-button_active {
-  pointer-events: none;
   border: 1px solid currentColor;
+  pointer-events: none;
 }
 
 .header__decorating {
   position: absolute;
+  display: var(--decorative);
   color: var(--accent-color);
   font-size: 1.125rem;
   line-height: 1.5625rem;
   inset-inline-end: 2.37rem;
   inset-block-start: 0.73rem;
-  display: var(--decorative);
 }
 
 .heading {
+  color: var(--main-header-color);
   font-weight: bold;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  color: var(--main-header-color);
-  text-shadow: var(--text-shadow);
   line-height: 82.5%;
+  text-shadow: var(--text-shadow);
 }
 
 .title-decor {
   color: var(--title-decor);
-  background: var(--accent-color);
-  font-size: 18px;
   font-weight: 700;
+  font-size: 18px;
   line-height: 130%;
+  background: var(--accent-color);
 }
 
 .header__subtext {
-  place-self: center end;
   position: relative;
+  place-self: center end;
   max-inline-size: 22.75rem;
 }
 
@@ -138,11 +137,11 @@
 }
 
 .section-title-decor {
-  color: var(--section-title-decor);
-  font-size: 1.125rem;
-  font-weight: 700;
-  line-height: 1.4625rem;
   margin: 0 0 1.25rem;
+  color: var(--section-title-decor);
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.4625rem;
 }
 
 .content__text-section {
@@ -167,9 +166,9 @@
 }
 
 .content__link {
-  --text-shadow: 2px 2px 0px var(--accent-color);
-  text-shadow: var(--text-shadow);
+  --text-shadow: 2px 2px 0 var(--accent-color);
   text-decoration: none;
+  text-shadow: var(--text-shadow);
 }
 
 .content__link:hover {
@@ -181,12 +180,12 @@
 }
 
 .mini-title-decor {
+  margin: 0 0 0.63rem;
   color: var(--title-decor);
+  font-weight: 400;
   font-size: 1.125rem;
   line-height: 1.4625rem;
-  font-weight: 400;
   background: var(--accent-color);
-  margin: 0 0 0.63rem;
 }
 
 .content__gallery {
@@ -202,27 +201,27 @@
 }
 
 .footer {
-  padding: var(--header-footer-section-padding);
+  position: relative;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 40.4rem;
-  align-items: center;
+  grid-template-rows: 1fr;
   justify-content: center;
-  position: relative;
+  align-items: center;
   height: 100vh;
+  padding: var(--header-footer-section-padding);
 }
 
 .footer__title {
-  --text-shadow: 2px 2px 0px var(--accent-color);
-  text-shadow: var(--text-shadow);
+  --text-shadow: 2px 2px 0 #ff0070;
   text-align: center;
+  text-shadow: var(--text-shadow);
 }
 
 .footer::before {
   content: '';
   position: absolute;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--corner-color);
+  border-block-start: 1px solid var(--corner-color);
   inline-size: 1.56488rem;
   block-size: 1.56244rem;
   inset-inline-end: 0.62rem;
@@ -232,16 +231,16 @@
 .footer::after {
   content: '';
   position: absolute;
-  border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--corner-color);
+  border-block-end: 1px solid var(--corner-color);
   inline-size: 1.56488rem;
   block-size: 1.56244rem;
   inset-block-end: 0.62rem;
   inset-inline-start: 0.62rem;
 }
 
-
 @media screen and (width >=768px) {
+
   .wrapper {
     --header-footer-section-padding: 1.25rem;
     padding: var(--header-footer-section-padding, 1.25rem);
@@ -299,13 +298,13 @@
   .content__subtitle:has(+ .content__gallery) {
     margin: 0 0 1.25rem;
   }
-  
+
   .content__gallery {
     display: grid;
-    grid-template: repeat(3, auto) / repeat(3, auto);
+    grid-auto-flow: row dense;
     row-gap: 1.05rem;
     column-gap: 1.25rem;
-    grid-auto-flow: row dense;
+    grid-template: repeat(3, auto) / repeat(3, auto);
   }
 
   .content__gallery-image-item {
@@ -343,16 +342,14 @@
 }
 
 @media screen and (768px <= width < 1024px) {
-    .header {
+
+  .header {
     grid-template-rows: 1fr fit-content(6.1875rem) 1fr;
   }
-
-  /* .footer {
-    grid-template-rows: ;
-  } */
 }
 
 @media (width >= 1024px) {
+  
   .header {
     grid-template-rows: 1fr fit-content(8.125rem) 1fr;
   }
@@ -379,8 +376,4 @@
   .content__text-section-item {
     flex: 1 1 33.33%;
   }
-
-  /* .footer {
-    grid-template-rows: 45.5rem;
-  } */
 }
